<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_item_carros_todos"
                android:icon="@drawable/ic_drawer_carro"
                android:title="@string/carros"/>
        <item
                android:id="@+id/nav_item_carros_classicos"
                android:icon="@drawable/ic_drawer_carro"
                android:title="@string/classicos"/>
        <item
                android:id="@+id/nav_item_carros_esportivos"
                android:icon="@drawable/ic_drawer_carro"
                android:title="@string/esportivos"/>
        <item
                android:id="@+id/nav_item_carros_luxo"
                android:icon="@drawable/ic_drawer_carro"
                android:title="@string/luxo"/>
        <item
                android:id="@+id/nav_item_site_livro"
                android:icon="@drawable/ic_drawer_site_livro"
                android:title="@string/site_do_livro"/>

        <item
                android:id="@+id/nav_item_settings"
                android:icon="@drawable/ic_drawer_settings"
                android:title="@string/configuracoes"/>
    </group>
</menu>
